--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Title</title>
+		<title>Minesweeper</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
@@ -9,14 +9,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>Header</h1>
+			<h1>Minesweeper</h1>
 		</header>
 			<section id="content">
 				<canvas id="Minesweeper" data-processing-sources="Minesweeper.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Task: Mark all of the bombs on the field. Left click squares to uncover parts of the field. Right click to mark bombs. You lose if you left click a bomb. You win if you mark 5 bombs.
 	    </footer>
 	</body>
 </html>
