Made the instructions clearer

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Task: Mark all of the bombs on the field. Left click squares to uncover parts of the field. Right click to mark bombs. You lose if you left click a bomb. You win if you mark 5 bombs.
+		    Task: Uncover the whole field while marking the 5 bombs on the field. Left click squares to uncover parts of the field. Right click to mark potential bombs. However, you lose if you left click a bomb.
 	    </footer>
 	</body>
 </html>
